--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "${file}", //src/ts/HelloWorld.ts
+			"program": "${file}",
 			"stopOnEntry": true,
 			"args": [],
 			"cwd": ".",
