--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "outDir": "src/js",
-        "rootDir": "src",
+        "outDir": "./src/js",
         "sourceMap": true
     }
 }
